flexbox alignment settings: center on page still an issue

--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,27 @@
+/* Reset browser settings. */
 *{
-    margin: auto;
-    padding: auto;
-    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;    
 }
 
 /* Container */
 .container{
     display: flex;
-    max-width: 200px;
-    min-height: 200px;    
-    border-width: 1px;
+    flex-direction: row;
+    justify-content: center;    
+    max-width: 400px;
+    min-height: 225px;    
+    border: 1px solid black;
     background-color: aliceblue;
+    border-radius: 5px;
+    align-self: center;
 }
 
 .form{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    align-items: center;
 }
 
 .form h2{
@@ -29,14 +33,19 @@
     border-left: 0;
     border-top: 0;
     border-right: 0;
+    padding-left: 2px;
+    margin-left: 6px;
+    margin-right: 6px;
 }
 
 #submit{
-    border-radius: 15px;
+    border-radius: 25px;
     background-color: mediumslateblue;
     border: none;
     padding: 10px 50px 10px 50px;
+    -webkit-text-fill-color: azure;
 }
+
 
 
 
